--- a/Ketch/UserInterface/Chat/ChatView.xib
+++ b/Ketch/UserInterface/Chat/ChatView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -55,10 +55,10 @@
                     <items/>
                 </toolbar>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="acP-Nw-WUu" userLabel="Title View">
-                    <rect key="frame" x="101.5" y="12" width="117.5" height="44"/>
+                    <rect key="frame" x="98" y="6" width="124" height="50"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YNr-EM-pRL" userLabel="Avatar" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="YNr-EM-pRL" secondAttribute="height" multiplier="1:1" id="Wa8-8b-dak"/>
                             </constraints>
@@ -71,8 +71,8 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Anastasia" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Vr-jl-E7A" userLabel="Name">
-                            <rect key="frame" x="52" y="14" width="65.5" height="15"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anastasia" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Vr-jl-E7A" userLabel="Name">
+                            <rect key="frame" x="58" y="17" width="66" height="15"/>
                             <fontDescription key="fontDescription" name="TransatTextMedium" family="Transat Text" pointSize="15"/>
                             <color key="textColor" red="0.14509803921568629" green="0.6470588235294118" blue="0.6470588235294118" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -81,7 +81,7 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="5Vr-jl-E7A" firstAttribute="leading" secondItem="YNr-EM-pRL" secondAttribute="trailing" constant="8" id="4P8-xp-Ocv"/>
-                        <constraint firstAttribute="height" constant="44" id="8QL-Z2-MX7"/>
+                        <constraint firstAttribute="height" constant="50" id="8QL-Z2-MX7"/>
                         <constraint firstItem="YNr-EM-pRL" firstAttribute="top" secondItem="acP-Nw-WUu" secondAttribute="top" id="DEb-ux-mdo"/>
                         <constraint firstItem="YNr-EM-pRL" firstAttribute="leading" secondItem="acP-Nw-WUu" secondAttribute="leading" id="GaI-Aw-QPe"/>
                         <constraint firstItem="YNr-EM-pRL" firstAttribute="centerY" secondItem="5Vr-jl-E7A" secondAttribute="centerY" id="Gpy-Le-Jvs"/>
@@ -100,7 +100,7 @@
                 <constraint firstAttribute="centerX" secondItem="acP-Nw-WUu" secondAttribute="centerX" id="Po2-tD-T73"/>
                 <constraint firstAttribute="bottom" secondItem="l9u-2b-4LK" secondAttribute="bottom" id="Re7-WW-UmS"/>
                 <constraint firstItem="DZn-Di-z3m" firstAttribute="leading" secondItem="mUa-cS-ru4" secondAttribute="leading" id="buh-Y3-5p2"/>
-                <constraint firstItem="acP-Nw-WUu" firstAttribute="top" secondItem="mUa-cS-ru4" secondAttribute="top" constant="12" id="k14-9y-kOR"/>
+                <constraint firstItem="acP-Nw-WUu" firstAttribute="top" secondItem="mUa-cS-ru4" secondAttribute="top" constant="6" id="k14-9y-kOR"/>
                 <constraint firstAttribute="bottom" secondItem="BoD-Az-3DM" secondAttribute="bottom" id="rHs-6q-NX4"/>
                 <constraint firstItem="BoD-Az-3DM" firstAttribute="leading" secondItem="mUa-cS-ru4" secondAttribute="leading" id="ts7-8f-0lH"/>
             </constraints>
