[wip] Custom root view controller that animates the waterline to arbitrary offset and ratio

--- a/Ketch/UserInterface/RootView.xib
+++ b/Ketch/UserInterface/RootView.xib
@@ -9,7 +9,7 @@
         </mutableArray>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoadingViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RootViewController">
             <connections>
                 <outlet property="view" destination="iN0-l3-epB" id="vqM-2e-9jj"/>
             </connections>
