--- a/Ketch/UserInterface/Shared/KetchBackgroundView.xib
+++ b/Ketch/UserInterface/Shared/KetchBackgroundView.xib
@@ -6,8 +6,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KetchBackgroundView" customModule="Ketch" customModuleProvider="target">
             <connections>
+                <outlet property="horizonHeight" destination="sPo-3N-DOh" id="x8I-r6-IGY"/>
                 <outlet property="ketchIcon" destination="4BP-aI-ryy" id="81X-lM-J3V"/>
-                <outlet property="waveTopMargin" destination="sPo-3N-DOh" id="pgm-NP-eij"/>
                 <outlet property="waveView" destination="2GV-Mt-CIn" id="8Sv-4W-5n1"/>
             </connections>
         </placeholder>
@@ -17,15 +17,21 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2GV-Mt-CIn" customClass="KetchWaveView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="60" width="375" height="807"/>
+                    <rect key="frame" x="0.0" y="567" width="375" height="580"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ketch" translatesAutoresizingMaskIntoConstraints="NO" id="4BP-aI-ryy">
-                    <rect key="frame" x="170" y="33" width="34" height="37"/>
+                    <rect key="frame" x="168" y="535" width="39" height="42"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="34" id="KdK-Ss-nfo"/>
                         <constraint firstAttribute="height" constant="37" id="lyg-hu-3j3"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="KdK-Ss-nfo"/>
+                            <exclude reference="lyg-hu-3j3"/>
+                        </mask>
+                    </variation>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="0.94117647058823528" green="0.98039215686274506" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -34,7 +40,7 @@
                 <constraint firstItem="4BP-aI-ryy" firstAttribute="centerX" secondItem="2GV-Mt-CIn" secondAttribute="centerX" id="92M-bK-Fqj"/>
                 <constraint firstItem="2GV-Mt-CIn" firstAttribute="top" secondItem="4BP-aI-ryy" secondAttribute="bottom" constant="-10" id="T86-mk-fC9"/>
                 <constraint firstAttribute="trailing" secondItem="2GV-Mt-CIn" secondAttribute="trailing" id="dsY-pr-2ap"/>
-                <constraint firstItem="2GV-Mt-CIn" firstAttribute="top" secondItem="rwt-zi-iy4" secondAttribute="top" constant="60" id="sPo-3N-DOh"/>
+                <constraint firstAttribute="bottom" secondItem="2GV-Mt-CIn" secondAttribute="top" constant="100" id="sPo-3N-DOh"/>
                 <constraint firstItem="2GV-Mt-CIn" firstAttribute="leading" secondItem="rwt-zi-iy4" secondAttribute="leading" id="xfd-UF-VVV"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -43,6 +49,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Ketch" width="19" height="21"/>
+        <image name="Ketch" width="39" height="42"/>
     </resources>
 </document>
